<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_500sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleX="1.22"
        android:src="@drawable/splash_bg"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/logo_IV"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        />
    <TextView
        android:id="@+id/welcome_TV"
        android:layout_width="@dimen/_200sdp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        app:layout_constraintTop_toBottomOf="@id/logo_IV"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_25ssp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_60sdp"/>
    <TextView
        android:id="@+id/logo_TV"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/welcome_TV"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="@dimen/_30ssp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/started_BT"
        android:layout_width="wrap_content"
        android:paddingLeft="@dimen/_27sdp"
        android:paddingRight="@dimen/_27sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_TV"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/button_bg"
        android:text="@string/started"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_bold"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>