<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetOtpActivity">

    <io.github.florent37.shapeofview.shapes.ArcView
        android:id="@+id/florent_lt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_arc_height="26dp"
        app:shape_arc_position="bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_color">

            <ImageView
                android:id="@+id/back_IV"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TV"
                android:layout_width="@dimen/_174sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/lato_black"
                android:text="@string/otp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_IV" />

            <TextView
                android:id="@+id/TV1"
                android:layout_width="@dimen/_174sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:fontFamily="@font/lato_black"
                android:text="@string/your_email"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_25sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TV" />

            <TextView
                android:id="@+id/TV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:fontFamily="@font/poppins_regular"
                android:lines="2"
                android:text="@string/admin"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TV1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </io.github.florent37.shapeofview.shapes.ArcView>

    <ImageView
        android:id="@+id/otp_IV"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@drawable/mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/florent_lt" />
    <HorizontalScrollView
        android:id="@+id/otp_lt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_IV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            >

            <EditText
                android:id="@+id/ED1"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/lato_bold"
                android:layout_marginStart="@dimen/_5sdp"
                android:hint="@string/zero"
                android:inputType="number"
                android:maxLength="1"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ED2"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/lato_bold"
                android:hint="@string/zero"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintStart_toEndOf="@id/ED1"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ED3"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/lato_bold"
                android:hint="@string/zero"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintStart_toEndOf="@id/ED2"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ED4"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/edit_bg"
                android:fontFamily="@font/lato_bold"
                android:hint="@string/zero"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintStart_toEndOf="@id/ED3"
                app:layout_constraintTop_toTopOf="parent" />
            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_60sdp"
                app:layout_constraintStart_toEndOf="@id/ED4"
                app:layout_constraintTop_toTopOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_BT"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        app:layout_constraintTop_toBottomOf="@id/otp_lt"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/button_bg"
        android:text="@string/next"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_bold"
        android:textStyle="bold"
        android:textSize="@dimen/_20ssp"
        android:textAllCaps="false"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive"
        app:layout_constraintTop_toBottomOf="@id/next_BT"
        android:textColor="@color/login_sign"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/_13ssp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"/>


</androidx.constraintlayout.widget.ConstraintLayout>