<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        app:layout_constraintTop_toTopOf="parent">

        <io.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:shape_arc_height="26dp"
            app:shape_arc_position="bottom">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_color">

                <ImageView
                    android:id="@+id/back_IV"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/back_arrow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/TV1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/new_password"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_25sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/back_IV" />

                <TextView
                    android:id="@+id/TV2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TV1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </io.github.florent37.shapeofview.shapes.ArcView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_350sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/objs" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_lt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout">

        <TextView
            android:id="@+id/email_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:autofillHints=""
            android:paddingLeft="@dimen/_10sdp"
            android:background="@drawable/edit_bg"
            android:hint="@string/password"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/email_TV"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="40dp">

        </EditText>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_password_lt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/password_lt">

        <TextView
            android:id="@+id/con_pass_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/confirm_password"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:autofillHints=""
            android:paddingLeft="@dimen/_10sdp"
            android:background="@drawable/edit_bg"
            android:hint="@string/confirm_password"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/con_pass_TV"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="40dp">

        </EditText>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_BT"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/lato_bold"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/con_password_lt" />
</androidx.constraintlayout.widget.ConstraintLayout>