<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/path_IV"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_240sdp"
        android:layout_marginStart="-140dp"
        android:layout_marginEnd="@dimen/_100sdp"
        android:background="@drawable/path1_2"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/path2"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_240sdp"
        android:layout_marginStart="@dimen/_95sdp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="-74dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/path2_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in_Tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:fontFamily="@font/lato_black"
        android:text="@string/sign_in_now"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_Tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_Tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/card_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_Tv">

        <View
            android:id="@+id/bottom_VW"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/border_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbarSize="@dimen/_2sdp"
            android:scrollbarThumbVertical="@color/primary_color"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_VW">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/email_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/email_address"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/email_icon"
                    app:layout_constraintTop_toBottomOf="@id/email_TV">

                </EditText>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>